Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103897

QQmlJSImportVisitor: bindings on QQmlJSScopes are created when scopes are not yet fully resolved

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 6.2.0, 6.3, 6.4.0 FF
    • QML: Compiler, QML: Tooling
    • e5251efe97fd66431f8badeb3cdcb67586b2e015

    Description

      Current QQmlJSImportVisitor model assumes that we could create bindings as soon as we encounter them. In practice, this is problematic as the scope that the binding belongs to may not be resolved, yet. For instance,

      import QtQuick
      Item {
          property IC p
          p.onXChanged: { // here, we haven't seen `IC` yet
              console.log("hooray");
          }
          component IC : Text {
              property string x
          }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-103897
        # Subject Branch Project Status CR V

        Activity

          People

            agolubev Andrei Golubev
            agolubev Andrei Golubev
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes