tests/auto/qml/qqmljsscope/data/resolvedNonUniqueScope.qml
@@ -1,0 +1,15 @@
+import QtQuick
+
+Item {
+    Component.onCompleted: {} // `Component` must be resolved
+    Component.onDestruction: {}
+
+    property IC p
+    p.onXChanged: {
+        console.log("hooray");
+    }
+
+    component IC : Text {
+        property string x
+    }
+}
